amazon-bedrock/1.0/modules/ROOT/pages/amazon-bedrock-connector-reference.adoc
= Amazon Bedrock Connector 1.0 Reference

== Configurations
---
[[Config]]
=== Configuration

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<Config_Basic, Basic>> 
* <<Config_Role, Role>> 
 | The connection types to provide to this configuration. | | x
| Name a| String | The identifier of this element used to reference it in other components. |  | x
| Expiration Policy a| <<ExpirationPolicy>> | Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  | 
|===

==== Connection Types
[[Config_Basic]]
===== Basic

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Session Token a| String | The session token provided by Amazon STS. |  | 
| Connection Timeout a| Number | The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50 | 
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit used in the connection timeout configurations. |  SECONDS | 
| Max Connections a| Number | Sets the maximum number of allowed open HTTP connections. |  50 | 
| Socket Timeout a| Number | The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50 | 
| Socket Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit used in the socket timeout configurations. |  SECONDS | 
| Access Key a| String | The access key provided by Amazon. |  | x
| Secret Key a| String | The secret key provided by Amazon. |  | x
| Region Endpoint a| String | Sets the topic region endpoint. |  us-east-1 | 
| Try Default AWSCredentials Provider Chain a| Boolean | Set this field to true to obtain credentials from the AWS environment. See https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html[Using credentials providers in the AWS SDK for Java 2.x]. |  false | 
| Custom Service Endpoint a| String | Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. |  | 
| TLS Configuration a| <<Tls>> | Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. |  | 
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Host a| String | The optional proxy host. |  | 
| Port a| Number | The optional proxy port. |  | 
| Username a| String | The optional proxy username. |  | 
| Password a| String | The optional proxy password. |  | 
| Domain a| String | The optional proxy domain. |  | 
| Workstation a| String | The optional proxy workstation. |  | 
|===
[[Config_Role]]
===== Role

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Role ARN a| String | The Role ARN uniquely identifies the role to assume to gain cross-account access. |  | x
| Custom STS Endpoint a| String | Sets a custom STS endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. |  | 
| External ID a| String | A unique identifier that might be required when you assume a role in another account. If the administrator of the account to which the role belongs provides an external ID, then provide that value in this field. |  | 
| Connection Timeout a| Number | The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50 | 
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit used in the connection timeout configurations. |  SECONDS | 
| Max Connections a| Number | Sets the maximum number of allowed open HTTP connections. |  50 | 
| Socket Timeout a| Number | The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50 | 
| Socket Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit used in the socket timeout configurations. |  SECONDS | 
| Access Key a| String | The access key provided by Amazon. |  | x
| Secret Key a| String | The secret key provided by Amazon. |  | x
| Region Endpoint a| String | Sets the topic region endpoint. |  us-east-1 | 
| Try Default AWSCredentials Provider Chain a| Boolean | Set this field to true to obtain credentials from the AWS environment. See https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html[Using credentials providers in the AWS SDK for Java 2.x]. |  false | 
| Custom Service Endpoint a| String | Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. |  | 
| TLS Configuration a| <<Tls>> | Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. |  | 
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Host a| String | The optional proxy host. |  | 
| Port a| Number | The optional proxy port. |  | 
| Username a| String | The optional proxy username. |  | 
| Password a| String | The optional proxy password. |  | 
| Domain a| String | The optional proxy domain. |  | 
| Workstation a| String | The optional proxy workstation. |  | 
|===

== Supported Operations
* <<AgentChat>> 
* <<AgentChatStreamingSse>> 
* <<AgentCreate>> 
* <<AgentCreateAlias>> 
* <<AgentDefinePromptTemplate>> 
* <<AgentDeleteAgentAliases>> 
* <<AgentDeleteById>> 
* <<AgentGetAliasByAgentId>> 
* <<AgentGetById>> 
* <<AgentGetByName>> 
* <<AgentList>> 
* <<ChatAnswerPrompt>> 
* <<ChatAnswerPromptMemory>> 
* <<CustomModelDetails>> 
* <<CustomModelsList>> 
* <<EmbeddingAdhocQuery>> 
* <<EmbeddingGenerateFromText>> 
* <<FoundationalModelDetails>> 
* <<FoundationalModelsList>> 
* <<ImageGenerate>> 
* <<SentimentAnalyze>> 

== Operations

[[AgentChat]]
== AGENT Chat
`<Bedrock:agent-chat>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Id a| String | The unique identifier of the Amazon Bedrock agent. |  | x
| Agent Alias Id a| String | The unique identifier of the agent alias. |  | x
| Prompt a| String | The text prompt to send to the model or agent. |  | x
| Enable Trace a| Boolean | Whether to enable tracing for the agent invocation. |  false | 
| Latency Optimized a| Boolean | Whether to optimize for lower latency. |  false | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Session Id a| String | The unique identifier of the session to maintain conversation context. |  | 
| Exclude Previous Thinking Steps a| Boolean | Whether to exclude previous thinking steps from the conversation history. |  false | 
| Previous Conversation Turns To Include a| Number | The number of previous conversation turns to include for context. |  | 
| Knowledge Base Id a| String | The unique identifier of the knowledge base to query. |  | 
| Number Of Results a| Number | The number of results to return from the query. |  | 
| Override Search Type a| Enumeration, one of:

** HYBRID
** SEMANTIC | The search type to use for retrieval. |  | 
| Retrieval Metadata Filter Type a| Enumeration, one of:

** AND_ALL
** OR_ALL | The filter type to apply to retrieval metadata. |  | 
| Metadata Filters a| Object | The metadata filters to apply to the retrieval query. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-premier-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[AgentChatStreamingSse]]
== AGENT Chat Streaming (SSE)
`<Bedrock:agent-chat-streaming-sse>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Id a| String | The unique identifier of the Amazon Bedrock agent. |  | x
| Agent Alias Id a| String | The unique identifier of the agent alias. |  | x
| Prompt a| String | The text prompt to send to the model or agent. |  | x
| Enable Trace a| Boolean | Whether to enable tracing for the agent invocation. |  false | 
| Latency Optimized a| Boolean | Whether to optimize for lower latency. |  false | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Session Id a| String | The unique identifier of the session to maintain conversation context. |  | 
| Exclude Previous Thinking Steps a| Boolean | Whether to exclude previous thinking steps from the conversation history. |  false | 
| Previous Conversation Turns To Include a| Number | The number of previous conversation turns to include for context. |  | 
| Knowledge Base Id a| String | The unique identifier of the knowledge base to query. |  | 
| Number Of Results a| Number | The number of results to return from the query. |  | 
| Override Search Type a| Enumeration, one of:

** HYBRID
** SEMANTIC | The search type to use for retrieval. |  | 
| Retrieval Metadata Filter Type a| Enumeration, one of:

** AND_ALL
** OR_ALL | The filter type to apply to retrieval metadata. |  | 
| Metadata Filters a| Object | The metadata filters to apply to the retrieval query. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-premier-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[AgentCreate]]
== AGENT Create
`<Bedrock:agent-create>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Name a| String | The name of the Amazon Bedrock agent. |  | x
| Instructions a| String | The instructions that define the agent's behavior. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-premier-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[AgentCreateAlias]]
== AGENT Create Alias
`<Bedrock:agent-create-alias>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Alias a| String | The alias name for the agent. |  | x
| Agent Id a| String | The unique identifier of the Amazon Bedrock agent. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-premier-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[AgentDefinePromptTemplate]]
== AGENT Define Prompt Template
`<Bedrock:agent-define-prompt-template>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Template a| String | The template text to define the prompt structure. |  | x
| Instructions a| String | The instructions that define the agent's behavior. |  | x
| Dataset a| String | The dataset to use with the template. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-express-v1 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Temperature a| Number | Controls the randomness of the model's output. Higher values produce more creative responses. |  0.7 | 
| Top P a| Number | Controls diversity via nucleus sampling. |  0.9 | 
| Top K a| Number | Controls diversity by limiting the number of tokens considered for each step. |  250 | 
| Max Token Count a| Number | The maximum number of tokens to generate in the response. |  512 | 
| Guardrail Identifier a| String | The unique identifier of the guardrail to apply. |  | 
| Guardrail Version a| String | The version of the guardrail to use. |  1 | 
| Aws Account Id a| String | The AWS account ID for cross-account access. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[AgentDeleteAgentAliases]]
== AGENT Delete Agent Aliases
`<Bedrock:agent-delete-agent-aliases>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Id a| String | The unique identifier of the Amazon Bedrock agent. |  | x
| Agent Alias Name a| String | The name of the agent alias to delete. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-premier-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[AgentDeleteById]]
== AGENT Delete By Id
`<Bedrock:agent-delete-by-id>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Id a| String | The unique identifier of the Amazon Bedrock agent. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-premier-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[AgentGetAliasByAgentId]]
== AGENT Get Alias By Agent Id
`<Bedrock:agent-get-alias-by-agent-id>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Id a| String | The unique identifier of the Amazon Bedrock agent. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-premier-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[AgentGetById]]
== AGENT Get By Id
`<Bedrock:agent-get-by-id>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Id a| String | The unique identifier of the Amazon Bedrock agent. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-premier-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[AgentGetByName]]
== AGENT Get By Name
`<Bedrock:agent-get-by-name>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Name a| String | The name of the Amazon Bedrock agent. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-premier-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[AgentList]]
== AGENT List
`<Bedrock:agent-list>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-premier-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[ChatAnswerPrompt]]
== CHAT Answer Prompt
`<Bedrock:chat-answer-prompt>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Prompt a| String | The text prompt to send to the model or agent. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-express-v1 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Temperature a| Number | Controls the randomness of the model's output. Higher values produce more creative responses. |  0.7 | 
| Top P a| Number | Controls diversity via nucleus sampling. |  0.9 | 
| Top K a| Number | Controls diversity by limiting the number of tokens considered for each step. |  250 | 
| Max Token Count a| Number | The maximum number of tokens to generate in the response. |  512 | 
| Guardrail Identifier a| String | The unique identifier of the guardrail to apply. |  | 
| Guardrail Version a| String | The version of the guardrail to use. |  1 | 
| Aws Account Id a| String | The AWS account ID for cross-account access. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[ChatAnswerPromptMemory]]
== CHAT Answer Prompt Memory
`<Bedrock:chat-answer-prompt-memory>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Prompt a| String | The text prompt to send to the model or agent. |  | x
| Memory Path a| String | The file path where conversation memory is stored. |  | x
| Memory Name a| String | The name identifier for the conversation memory. |  | x
| Keep Last Messages a| Number | The number of recent messages to retain in memory. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-express-v1 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Temperature a| Number | Controls the randomness of the model's output. Higher values produce more creative responses. |  0.7 | 
| Top P a| Number | Controls diversity via nucleus sampling. |  0.9 | 
| Top K a| Number | Controls diversity by limiting the number of tokens considered for each step. |  250 | 
| Max Token Count a| Number | The maximum number of tokens to generate in the response. |  512 | 
| Guardrail Identifier a| String | The unique identifier of the guardrail to apply. |  | 
| Guardrail Version a| String | The version of the guardrail to use. |  1 | 
| Aws Account Id a| String | The AWS account ID for cross-account access. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[CustomModelDetails]]
== CUSTOM Model Details
`<Bedrock:custom-model-details>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-express-v1 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[CustomModelsList]]
== CUSTOM Models List
`<Bedrock:custom-models-list>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[EmbeddingAdhocQuery]]
== EMBEDDING Adhoc Query
`<Bedrock:embedding-adhoc-query>`

Performs retrieval augmented generation based on files.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Prompt a| String | The text prompt to send to the model or agent. |  | x
| File Path a| String | The path to the file to use for the query. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the embedding model to use. |  amazon.titan-embed-text-v1 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Dimension a| Number | The dimensionality of the embedding vectors. |  1024 | 
| Normalize a| Boolean | Whether to normalize the embedding vectors. |  true | 
| Option Type a| String | The type of embedding output to generate. |  FULL | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[EmbeddingGenerateFromText]]
== EMBEDDING Generate From Text
`<Bedrock:embedding-generate-from-text>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Prompt a| String | The text prompt to send to the model or agent. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the embedding model to use. |  amazon.titan-embed-text-v1 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Dimension a| Number | The dimensionality of the embedding vectors. |  1024 | 
| Normalize a| Boolean | Whether to normalize the embedding vectors. |  true | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[FoundationalModelDetails]]
== FOUNDATIONAL Model Details
`<Bedrock:foundational-model-details>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-express-v1 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[FoundationalModelsList]]
== FOUNDATIONAL Models List
`<Bedrock:foundational-models-list>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[ImageGenerate]]
== IMAGE Generate
`<Bedrock:image-generate>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Text To Image a| String | The text prompt describing the image to generate. |  | x
| Avoid In Image a| String | Elements to avoid including in the generated image. |  | x
| Full Path Output a| String | The full file path where the generated image is saved. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the image generation model to use. |  amazon.titan-image-generator-v1:0 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Num Of Images a| Number | The number of images to generate. |  1 | 
| Height a| Number | The height of the generated image in pixels. |  512 | 
| Width a| Number | The width of the generated image in pixels. |  512 | 
| Cfg Scale a| Number | The classifier-free guidance scale. Higher values increase adherence to the prompt. |  8.0 | 
| Seed a| Number | The random seed for reproducible image generation. |  0 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

[[SentimentAnalyze]]
== SENTIMENT Analyze
`<Bedrock:sentiment-analyze>`

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Text To Analyze a| String | The text to analyze for sentiment. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-express-v1 | 
| Region a| String | The AWS region where the model is deployed. |  us-east-1 | 
| Temperature a| Number | Controls the randomness of the model's output. Higher values produce more creative responses. |  0.7 | 
| Top P a| Number | Controls diversity via nucleus sampling. |  0.9 | 
| Top K a| Number | Controls diversity by limiting the number of tokens considered for each step. |  250 | 
| Max Token Count a| Number | The maximum number of tokens to generate in the response. |  512 | 
| Guardrail Identifier a| String | The unique identifier of the guardrail to apply. |  | 
| Guardrail Version a| String | The version of the guardrail to use. |  1 | 
| Aws Account Id a| String | The AWS account ID for cross-account access. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* BEDROCK:ACCESS_DENIED 
* BEDROCK:AWS_SDK_ERROR 
* BEDROCK:BEDROCK_ERROR 
* BEDROCK:CLIENT_ERROR 
* BEDROCK:CONNECTIVITY 
* BEDROCK:RESOURCE_NOT_FOUND 
* BEDROCK:RETRY_EXHAUSTED 
* BEDROCK:SERVICE_ERROR 
* BEDROCK:THROTTLING_ERROR 
* BEDROCK:VALIDATION_ERROR 

== Types
[[Tls]]
=== Tls

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> | The trust store configuration. |  | 
| Key Store a| <<KeyStore>> | The key store configuration. |  | 
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | The revocation check configuration. |  | 
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  | 
| Password a| String | The password used to protect the trust store. |  | 
| Type a| String | The type of store used. |  | 
| Algorithm a| String | The algorithm used by the trust store. |  | 
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  | 
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  | 
| Type a| String | The type of store used. |  | 
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  | 
| Key Password a| String | The password used to protect the private key. |  | 
| Password a| String | The password used to protect the key store. |  | 
| Algorithm a| String | The algorithm used by the key store. |  | 
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  | 
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  | 
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  | 
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  | 
|===

[[CustomOcspResponder]]
=== Custom Ocsp Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  | 
|===

[[CrlFile]]
=== Crl File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  | 
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use. |  | 
|===

[[Reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. |  | 
| Blocking a| Boolean | If false, the reconnection strategy runs in a separate, non-blocking thread. |  | 
| Count a| Number | How many reconnection attempts to make. |  | 
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. |  | 
| Blocking a| Boolean | If false, the reconnection strategy runs in a separate, non-blocking thread. |  | 
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  | 
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  | 
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed. |  | 
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed content on the disk is buffered. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which *In Memory Size* is expressed. |  | 
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT | The error type from the source. |  | 
| Target a| String | The target error type. |  | x
|===
