amazon-bedrock/1.1/modules/ROOT/pages/amazon-bedrock-connector-reference.adoc
= Amazon Bedrock Connector 1.1 Reference

== Configurations
---
[[Config]]
=== Configuration

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<Config_Basic, Basic>> 
* <<Config_Role, Role>> 
 | The connection types to provide to this configuration. | | x
| Name a| String | The identifier of this element used to reference it in other components. |  | x
| Expiration Policy a| <<ExpirationPolicy>> | Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  | 
|===

==== Connection Types
[[Config_Basic]]
===== Basic

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Session Token a| String | The session token provided by Amazon STS. |  | 
| Connection Timeout a| Number | The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50 | 
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit used in the connection timeout configurations. |  SECONDS | 
| Max Connections a| Number | Sets the maximum number of allowed open HTTP connections. |  50 | 
| Socket Timeout a| Number | The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50 | 
| Socket Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit used in the socket timeout configurations. |  SECONDS | 
| Access Key a| String | The access key provided by Amazon. |  | x
| Secret Key a| String | The secret key provided by Amazon. |  | x
| Region Endpoint a| String | Sets the topic region endpoint. |  us-east-1 | 
| Try Default AWSCredentials Provider Chain a| Boolean | Set this field to true to obtain credentials from the AWS environment. See https://docs.aws.amazon.com/sdk-for-java/latest/developer-guide/credentials.html[Using credentials providers in the AWS SDK for Java 2.x]. |  false | 
| Custom Service Endpoint a| String | Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. |  | 
| TLS Configuration a| <<Tls>> | Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. |  | 
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Host a| String | The optional proxy host. |  | 
| Port a| Number | The optional proxy port. |  | 
| Username a| String | The optional proxy username. |  | 
| Password a| String | The optional proxy password. |  | 
| Domain a| String | The optional proxy domain. |  | 
| Workstation a| String | The optional proxy workstation. |  | 
|===
[[Config_Role]]
===== Role

====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Role ARN a| String | The Role ARN uniquely identifies the role to assume to gain cross-account access. |  | x
| Custom STS Endpoint a| String | Sets a custom STS endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. |  | 
| External ID a| String | A unique identifier that might be required when you assume a role in another account. If the administrator of the account to which the role belongs provides an external ID, then provide that value in this field. |  | 
| Connection Timeout a| Number | The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50 | 
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit used in the connection timeout configurations. |  SECONDS | 
| Max Connections a| Number | Sets the maximum number of allowed open HTTP connections. |  50 | 
| Socket Timeout a| Number | The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50 | 
| Socket Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit used in the socket timeout configurations. |  SECONDS | 
| Access Key a| String | The access key provided by Amazon. |  | x
| Secret Key a| String | The secret key provided by Amazon. |  | x
| Region Endpoint a| String | Sets the topic region endpoint. |  us-east-1 | 
| Try Default AWSCredentials Provider Chain a| Boolean | Set this field to true to obtain credentials from the AWS environment. See https://docs.aws.amazon.com/sdk-for-java/latest/developer-guide/credentials.html[Using credentials providers in the AWS SDK for Java 2.x]. |  false | 
| Custom Service Endpoint a| String | Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint. |  | 
| TLS Configuration a| <<Tls>> | Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. |  | 
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Host a| String | The optional proxy host. |  | 
| Port a| Number | The optional proxy port. |  | 
| Username a| String | The optional proxy username. |  | 
| Password a| String | The optional proxy password. |  | 
| Domain a| String | The optional proxy domain. |  | 
| Workstation a| String | The optional proxy workstation. |  | 
|===

== Supported Operations
* <<AgentChat>> 
* <<AgentChatStreamingSse>> 
* <<AgentDefinePromptTemplate>> 
* <<AgentGetById>> 
* <<AgentList>> 
* <<AgentcoreBatchCreateMemoryRecords>> 
* <<AgentcoreBatchDeleteMemoryRecords>> 
* <<AgentcoreBatchUpdateMemoryRecords>> 
* <<AgentcoreGetMemoryRecord>> 
* <<AgentcoreGetResourceApiKey>> 
* <<AgentcoreGetWorkloadAccessToken>> 
* <<AgentcoreInvokeAgentRuntime>> 
* <<AgentcoreInvokeAgentRuntimeAsBytes>> 
* <<AgentcoreListMemoryRecords>> 
* <<AgentcoreRetrieveMemoryRecords>> 
* <<AgentcoreStopRuntimeSession>> 
* <<ChatAnswerPrompt>> 
* <<ChatAnswerPromptStreaming>> 
* <<EmbeddingAdhocQuery>> 
* <<EmbeddingGenerateFromText>> 
* <<FoundationalModelDetails>> 
* <<FoundationalModelsList>> 
* <<ImageGenerate>> 
* <<SentimentAnalyze>> 

== Operations

[[AgentChat]]
== AGENT Chat
`<ms-bedrock:agent-chat>`

Sends a chat message to a Bedrock agent and receives a response. The agent can use knowledge bases and action groups to provide intelligent responses.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Id a| String | The unique identifier of the agent to chat with. |  | x
| Agent Alias Id a| String | The alias ID of the agent version to use. |  | x
| Prompt a| String | The user's message or prompt to send to the agent. |  | x
| Enable Trace a| Boolean | Whether to enable trace logging for debugging agent reasoning. |  false | 
| Latency Optimized a| Boolean | Whether to optimize for lower latency at the cost of some functionality. |  false | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Session Id a| String | The unique identifier of the session to maintain conversation context. |  | 
| Exclude Previous Thinking Steps a| Boolean | Whether to exclude previous thinking steps from the conversation history. |  false | 
| Previous Conversation Turns To Include a| Number | The number of previous conversation turns to include for context. |  | 
| Session Attributes a| Object | Key-value pairs that persist across the entire agent session. Each value supports DataWeave expressions. Blank keys and blank values are filtered before the request is built. |  | 
| Prompt Session Attributes a| Object | Key-value pairs that apply only to the current prompt and turn. Each value supports DataWeave expressions. Blank keys and blank values are filtered before the request is built. |  | 
| Knowledge Base Id a| String | The unique identifier of the knowledge base to query. |  | 
| Number Of Results a| Number | The number of results to return from the query. |  | 
| Override Search Type a| Enumeration, one of:

** HYBRID
** SEMANTIC | The search type to use for retrieval. |  | 
| Retrieval Metadata Filter Type a| Enumeration, one of:

** AND_ALL
** OR_ALL | The filter type to apply to retrieval metadata. |  | 
| Metadata Filters a| Object | The metadata filters to apply to the retrieval query. |  | 
| Knowledge Bases a| Array of <<KnowledgeBaseConfig>> | The knowledge base configurations to use for retrieval. |  | 
| Request Timeout a| Number | Request timeout (overrides connector-level timeout if provided). |  | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Unit of time for the request timeout. |  | 
| Enable Retry a| Boolean | Enable retry for streaming operations on timeout failures. |  false | 
| Max Retries a| Number | Maximum number of retry attempts (0 = no retries). |  3 | 
| Retry Backoff Ms a| Number | Base backoff delay in milliseconds for exponential backoff. |  1000 | 
| Request Id a| String | Request ID mapped from REQUEST-ID header to include in session-start event. |  | 
| Correlation Id a| String | Correlation ID mapped from CORRELATION-ID header to include in session-start event. |  | 
| User Id a| String | User ID mapped from USER-ID header to include in session-start event. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentChatStreamingSse]]
== AGENT Chat Streaming (SSE)
`<ms-bedrock:agent-chat-streaming-sse>`

Sends a chat message to a Bedrock agent and receives a streaming response using Server-Sent Events (SSE). Returns responses in real-time as the agent generates them.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Id a| String | The unique identifier of the agent to chat with. |  | x
| Agent Alias Id a| String | The alias ID of the agent version to use. |  | x
| Prompt a| String | The user's message or prompt to send to the agent. |  | x
| Enable Trace a| Boolean | Whether to enable trace logging for debugging agent reasoning. |  false | 
| Latency Optimized a| Boolean | Whether to optimize for lower latency at the cost of some functionality. |  false | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Session Id a| String | The unique identifier of the session to maintain conversation context. |  | 
| Exclude Previous Thinking Steps a| Boolean | Whether to exclude previous thinking steps from the conversation history. |  false | 
| Previous Conversation Turns To Include a| Number | The number of previous conversation turns to include for context. |  | 
| Session Attributes a| Object | Key-value pairs that persist across the entire agent session. Each value supports DataWeave expressions. Blank keys and blank values are filtered before the request is built. |  | 
| Prompt Session Attributes a| Object | Key-value pairs that apply only to the current prompt and turn. Each value supports DataWeave expressions. Blank keys and blank values are filtered before the request is built. |  | 
| Knowledge Base Id a| String | The unique identifier of the knowledge base to query. |  | 
| Number Of Results a| Number | The number of results to return from the query. |  | 
| Override Search Type a| Enumeration, one of:

** HYBRID
** SEMANTIC | The search type to use for retrieval. |  | 
| Retrieval Metadata Filter Type a| Enumeration, one of:

** AND_ALL
** OR_ALL | The filter type to apply to retrieval metadata. |  | 
| Metadata Filters a| Object | The metadata filters to apply to the retrieval query. |  | 
| Knowledge Bases a| Array of <<KnowledgeBaseConfig>> | The knowledge base configurations to use for retrieval. |  | 
| Request Timeout a| Number | Request timeout (overrides connector-level timeout if provided). |  | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Unit of time for the request timeout. |  | 
| Enable Retry a| Boolean | Enable retry for streaming operations on timeout failures. |  false | 
| Max Retries a| Number | Maximum number of retry attempts (0 = no retries). |  3 | 
| Retry Backoff Ms a| Number | Base backoff delay in milliseconds for exponential backoff. |  1000 | 
| Request Id a| String | Request ID mapped from REQUEST-ID header to include in session-start event. |  | 
| Correlation Id a| String | Correlation ID mapped from CORRELATION-ID header to include in session-start event. |  | 
| User Id a| String | User ID mapped from USER-ID header to include in session-start event. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentDefinePromptTemplate]]
== AGENT Define Prompt Template
`<ms-bedrock:agent-define-prompt-template>`

Defines a prompt template with instructions and dataset for use in agent operations.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Template a| String | The prompt template string with placeholders for instructions and dataset. |  | x
| Instructions a| String | Instructions to be inserted into the template. |  | x
| Dataset a| String | Dataset to be inserted into the template. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.nova-lite-v1:0 | 
| Temperature a| Number | A value between 0 and 1 that regulates the creativity of LLMs' responses. Use lower temperature if you want more deterministic responses, and use higher temperature if you want more creative or different responses for the same prompt from LLMs on Amazon Bedrock. |  0.7 | 
| Top P a| Number | The percentage of most-likely candidates that the model considers for the next token. It typically ranges between 0.9 and 0.95. Refer to the model provider documentation to confirm whether this parameter is supported and to verify the appropriate acceptable range. |  | 
| Top K a| Number | The number of most-likely candidates that the model considers for the next token. It typically ranges between 0.4 and 0.6. Refer to the model provider documentation to confirm whether this parameter is supported and to verify the appropriate acceptable range. |  | 
| Max Token Count a| Number | The maximum number of tokens to consume during output generation. For consistent and predictable responses, it is recommended to explicitly configure maxTokens based on the model’s supported limits and expected output size. |  | 
| Guardrail Identifier a| String | The unique identifier of the guardrail to apply. |  | 
| Guardrail Version a| String | The version of the guardrail to use. |  1 | 
| Aws Account Id a| String | The AWS account ID for cross-account access. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentGetById]]
== AGENT Get By Id
`<ms-bedrock:agent-get-by-id>`

Retrieves details of a Bedrock agent by its unique identifier.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Id a| String | The unique identifier of the agent to retrieve. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentList]]
== AGENT List
`<ms-bedrock:agent-list>`

Lists all Bedrock agents available in the AWS account.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreBatchCreateMemoryRecords]]
== AgentCore - Batch Create Memory Records
`<ms-bedrock:agentcore-batch-create-memory-records>`

Creates multiple memory records in a Bedrock AgentCore memory resource in a single batch operation.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Memory Id a| String | The unique identifier of the memory resource. |  | x
| Create Records a| Array of <<MemoryRecordCreateInputParameters>> | The memory records to create. |  | x
| Client Token a| String | A unique, case-sensitive identifier that you provide to ensure the idempotency of the request. |  | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreBatchDeleteMemoryRecords]]
== AgentCore - Batch Delete Memory Records
`<ms-bedrock:agentcore-batch-delete-memory-records>`

Deletes multiple memory records from a Bedrock AgentCore memory resource in a single batch operation.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Memory Id a| String | The unique identifier of the memory resource. |  | x
| Delete Records a| Array of <<MemoryRecordDeleteInputParameters>> | The memory records to delete. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreBatchUpdateMemoryRecords]]
== AgentCore - Batch Update Memory Records
`<ms-bedrock:agentcore-batch-update-memory-records>`

Updates multiple memory records in a Bedrock AgentCore memory resource in a single batch operation.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Memory Id a| String | The unique identifier of the memory resource. |  | x
| Update Records a| Array of <<MemoryRecordUpdateInputParameters>> | The memory records to update. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreGetMemoryRecord]]
== AgentCore - Get Memory Record
`<ms-bedrock:agentcore-get-memory-record>`

Retrieves a specific memory record from a Bedrock AgentCore memory resource.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Memory Id a| String | The unique identifier of the memory resource. |  | x
| Memory Record Id a| String | The unique identifier of the memory record to retrieve. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreGetResourceApiKey]]
== AgentCore - Get Resource API Key
`<ms-bedrock:agentcore-get-resource-api-key>`

Retrieves an API key for a resource credential provider using a workload identity token.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Resource Credential Provider Name a| String | The name of the resource credential provider. |  | x
| Workload Identity Token a| String | The workload identity token used to authenticate the request. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreGetWorkloadAccessToken]]
== AgentCore - Get Workload Access Token
`<ms-bedrock:agentcore-get-workload-access-token>`

Retrieves a workload access token for a Bedrock AgentCore workload identity.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Workload Name a| String | The name of the workload identity. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreInvokeAgentRuntime]]
== AgentCore - Invoke Agent Runtime (Streaming)
`<ms-bedrock:agentcore-invoke-agent-runtime>`

Invokes a Bedrock AgentCore runtime and returns the response as a stream.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Runtime Arn a| String | The Amazon Resource Name (ARN) of the agent runtime to invoke. |  | x
| Runtime Session Id a| String | The unique identifier of the runtime session. |  | x
| Payload a| String | The input payload to send to the agent runtime. |  | x
| Qualifier a| String | Optional runtime qualifier such as a version alias; defaults to the DEFAULT endpoint when unset. |  | 
| Content Type a| String | The content type of the request payload. |  | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<InvokeAgentRuntimeAttributes>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreInvokeAgentRuntimeAsBytes]]
== AgentCore - Invoke Agent Runtime As Bytes (Non Streaming)
`<ms-bedrock:agentcore-invoke-agent-runtime-as-bytes>`

Invokes a Bedrock AgentCore runtime and returns the complete response as bytes.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Runtime Arn a| String | The Amazon Resource Name (ARN) of the agent runtime to invoke. |  | x
| Runtime Session Id a| String | The unique identifier of the runtime session. |  | x
| Payload a| String | The input payload to send to the agent runtime. |  | x
| Qualifier a| String | Optional runtime qualifier such as a version alias; defaults to the DEFAULT endpoint when unset. |  | 
| Content Type a| String | The content type of the request payload. |  | 
| Accept a| String | The content type that the client expects in the response. |  | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<InvokeAgentRuntimeAttributes>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreListMemoryRecords]]
== AgentCore - List Memory Records
`<ms-bedrock:agentcore-list-memory-records>`

Lists memory records in a Bedrock AgentCore memory resource, optionally filtered by namespace or metadata.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Memory Id a| String | The unique identifier of the memory resource. |  | x
| Namespace a| String | The namespace prefix to filter memory records by. Either Namespace or Namespace Path is required. |  | 
| Namespace Path a| String | The namespace path for hierarchical retrievals. Either Namespace or Namespace Path is required. |  | 
| Memory Strategy Id a| String | The unique identifier of the memory strategy to filter by. |  | 
| Max Results a| Number | The maximum number of results to return. |  | 
| Next Token a| String | The pagination token used to retrieve the next page of results. |  | 
| Memory Metadata Filters a| Array of <<MemoryMetadataFilterExpressionParameters>> | The metadata filters to apply to the memory records. |  | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreRetrieveMemoryRecords]]
== AgentCore - Retrieve Memory Records
`<ms-bedrock:agentcore-retrieve-memory-records>`

Searches and retrieves memory records from a Bedrock AgentCore memory resource based on search criteria.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Memory Id a| String | The unique identifier of the memory resource. |  | x
| Search Criteria a| <<SearchCriteriaParameters>> | The criteria used to search for memory records. |  | x
| Namespace a| String | The namespace to search within. Either Namespace or Namespace Path is required. |  | 
| Namespace Path a| String | The namespace path for hierarchical retrievals. Either Namespace or Namespace Path is required. |  | 
| Max Results a| Number | The maximum number of results to return. |  | 
| Next Token a| String | The pagination token used to retrieve the next page of results. |  | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[AgentcoreStopRuntimeSession]]
== AgentCore - Stop Runtime Session
`<ms-bedrock:agentcore-stop-runtime-session>`

Stops an active Bedrock AgentCore runtime session.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Agent Runtime Arn a| String | The Amazon Resource Name (ARN) of the agent runtime. |  | x
| Runtime Session Id a| String | The unique identifier of the runtime session to stop. |  | x
| Qualifier a| String | Optional runtime qualifier such as a version alias; defaults to the DEFAULT endpoint when unset. |  | 
| Idempotency Token a| String | An opaque de-duplication identifier the AWS SDK uses to safely retry the request; the SDK auto-generates one when unset. This is not an authentication token. |  | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<StopRuntimeSessionAttributes>>
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[ChatAnswerPrompt]]
== CHAT Answer Prompt
`<ms-bedrock:chat-answer-prompt>`

Generates a text response from a prompt using the specified Bedrock foundation model.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Prompt a| String | The text prompt to send to the model. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.nova-lite-v1:0 | 
| Temperature a| Number | A value between 0 and 1 that regulates the creativity of LLMs' responses. Use lower temperature if you want more deterministic responses, and use higher temperature if you want more creative or different responses for the same prompt from LLMs on Amazon Bedrock. |  0.7 | 
| Top P a| Number | The percentage of most-likely candidates that the model considers for the next token. It typically ranges between 0.9 and 0.95. Refer to the model provider documentation to confirm whether this parameter is supported and to verify the appropriate acceptable range. |  | 
| Top K a| Number | The number of most-likely candidates that the model considers for the next token. It typically ranges between 0.4 and 0.6. Refer to the model provider documentation to confirm whether this parameter is supported and to verify the appropriate acceptable range. |  | 
| Max Token Count a| Number | The maximum number of tokens to consume during output generation. For consistent and predictable responses, it is recommended to explicitly configure maxTokens based on the model’s supported limits and expected output size. |  | 
| Guardrail Identifier a| String | The unique identifier of the guardrail to apply. |  | 
| Guardrail Version a| String | The version of the guardrail to use. |  1 | 
| Aws Account Id a| String | The AWS account ID for cross-account access. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[ChatAnswerPromptStreaming]]
== CHAT Answer Prompt Streaming
`<ms-bedrock:chat-answer-prompt-streaming>`

Generates a streaming text response from a prompt using Server-Sent Events (SSE). Returns responses in real-time as they are generated.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Prompt a| String | The text prompt to send to the model. |  | x
| Model Arn a| String | The optional ARN of a base model, inference profile, or application inference profile. If you set this field, the connector uses this ARN and ignores *Model Name*. |  | 
| Attachments a| Array of <<ConverseAttachment>> | Optional images or documents to include with the prompt. |  | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.nova-lite-v1:0 | 
| Temperature a| Number | A value between 0 and 1 that regulates the creativity of LLMs' responses. Use lower temperature if you want more deterministic responses, and use higher temperature if you want more creative or different responses for the same prompt from LLMs on Amazon Bedrock. |  0.7 | 
| Top P a| Number | The percentage of most-likely candidates that the model considers for the next token. It typically ranges between 0.9 and 0.95. Refer to the model provider documentation to confirm whether this parameter is supported and to verify the appropriate acceptable range. |  | 
| Top K a| Number | The number of most-likely candidates that the model considers for the next token. It typically ranges between 0.4 and 0.6. Refer to the model provider documentation to confirm whether this parameter is supported and to verify the appropriate acceptable range. |  | 
| Max Token Count a| Number | The maximum number of tokens to consume during output generation. For consistent and predictable responses, it is recommended to explicitly configure maxTokens based on the model’s supported limits and expected output size. |  | 
| Guardrail Identifier a| String | The unique identifier of the guardrail to apply. |  | 
| Guardrail Version a| String | The version of the guardrail to use. |  1 | 
| Aws Account Id a| String | The AWS account ID for cross-account access. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[EmbeddingAdhocQuery]]
== EMBEDDING Adhoc Query
`<ms-bedrock:embedding-adhoc-query>`

Performs Retrieval Augmented Generation (RAG) by converting the query and documents into embeddings, comparing them for similarity, and ranking the most relevant document chunks to ground the response with respect to the query.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Prompt a| String | The query text to search for in the document. |  | x
| File Path a| String | Optional file system path to a document file on the Mule runtime host to embed. Used when *Document Bytes* is not set. Do not bind this field directly to untrusted end-user input. |  | 
| Document Bytes a| String | Optional base64-encoded document content to embed. Takes precedence over *File Path* when both are set. |  | 
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the embedding model to use. |  amazon.titan-embed-text-v1 | 
| Dimension a| Number | The dimensionality of the embedding vectors. |  1024 | 
| Normalize a| Boolean | Whether to normalize the embedding vectors. |  true | 
| Option Type a| String | The type of embedding output to generate. |  FULL | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[EmbeddingGenerateFromText]]
== EMBEDDING Generate From Text
`<ms-bedrock:embedding-generate-from-text>`

Generates vector embeddings from text using Amazon Bedrock embedding models. Embeddings are numerical representations of text that capture semantic meaning.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Prompt a| String | The text to generate embeddings for. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the embedding model to use. |  amazon.titan-embed-text-v1 | 
| Dimension a| Number | The dimensionality of the embedding vectors. |  1024 | 
| Normalize a| Boolean | Whether to normalize the embedding vectors. |  true | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[FoundationalModelDetails]]
== FOUNDATIONAL Model Details
`<ms-bedrock:foundational-model-details>`

Retrieves detailed information about a specific foundation model available in Amazon Bedrock.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.titan-text-express-v1 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[FoundationalModelsList]]
== FOUNDATIONAL Models List
`<ms-bedrock:foundational-models-list>`

Lists all foundation models available in Amazon Bedrock for the specified region.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[ImageGenerate]]
== IMAGE Generate
`<ms-bedrock:image-generate>`

Generates an image from a text prompt using Amazon Bedrock image generation models (e.g., Stable Diffusion, Amazon Titan Image).

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Text To Image a| String | The text prompt describing the image to generate. |  | x
| Avoid In Image a| String | Text describing what should be avoided in the generated image (negative prompt). |  | x
| Full Path Output a| String | The full file path where the generated image is saved. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the image generation model to use. |  amazon.titan-image-generator-v1:0 | 
| Num Of Images a| Number | The number of images to generate. |  1 | 
| Height a| Number | The height of the generated image in pixels. |  512 | 
| Width a| Number | The width of the generated image in pixels. |  512 | 
| Cfg Scale a| Number | The classifier-free guidance scale. Higher values increase adherence to the prompt. |  8.0 | 
| Seed a| Number | The random seed for reproducible image generation. |  0 | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

[[SentimentAnalyze]]
== SENTIMENT Analyze
`<ms-bedrock:sentiment-analyze>`

Analyzes the sentiment of the input text using Amazon Bedrock sentiment analysis models. Determines whether the text expresses positive, negative, or neutral sentiment.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Text To Analyze a| String | The text to analyze for sentiment. |  | x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  | 
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  | 
| Config Ref a| ConfigurationProvider | The name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. Repeatable streams are the default behavior. |  | 
| Model Name a| String | The name of the foundation model to use. |  amazon.nova-lite-v1:0 | 
| Temperature a| Number | A value between 0 and 1 that regulates the creativity of LLMs' responses. Use lower temperature if you want more deterministic responses, and use higher temperature if you want more creative or different responses for the same prompt from LLMs on Amazon Bedrock. |  0.7 | 
| Top P a| Number | The percentage of most-likely candidates that the model considers for the next token. It typically ranges between 0.9 and 0.95. Refer to the model provider documentation to confirm whether this parameter is supported and to verify the appropriate acceptable range. |  | 
| Top K a| Number | The number of most-likely candidates that the model considers for the next token. It typically ranges between 0.4 and 0.6. Refer to the model provider documentation to confirm whether this parameter is supported and to verify the appropriate acceptable range. |  | 
| Max Token Count a| Number | The maximum number of tokens to consume during output generation. For consistent and predictable responses, it is recommended to explicitly configure maxTokens based on the model’s supported limits and expected output size. |  | 
| Guardrail Identifier a| String | The unique identifier of the guardrail to apply. |  | 
| Guardrail Version a| String | The version of the guardrail to use. |  1 | 
| Aws Account Id a| String | The AWS account ID for cross-account access. |  | 
| Target Variable a| String | The name of the variable that stores the operation's output. |  | 
| Target Value a| String | An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | A retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Config>> 

=== Throws

* MS-BEDROCK:ACCESS_DENIED 
* MS-BEDROCK:AWS_SDK_ERROR 
* MS-BEDROCK:BEDROCK_ERROR 
* MS-BEDROCK:CLIENT_ERROR 
* MS-BEDROCK:CONNECTIVITY 
* MS-BEDROCK:RESOURCE_NOT_FOUND 
* MS-BEDROCK:RETRY_EXHAUSTED 
* MS-BEDROCK:SERVICE_ERROR 
* MS-BEDROCK:THROTTLING_ERROR 
* MS-BEDROCK:VALIDATION_ERROR 

== Types
[[Tls]]
=== Tls

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> | The trust store configuration. |  | 
| Key Store a| <<KeyStore>> | The key store configuration. |  | 
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | The revocation check configuration. |  | 
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  | 
| Password a| String | The password used to protect the trust store. |  | 
| Type a| String | The type of store used. |  | 
| Algorithm a| String | The algorithm used by the trust store. |  | 
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  | 
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  | 
| Type a| String | The type of store used. |  | 
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  | 
| Key Password a| String | The password used to protect the private key. |  | 
| Password a| String | The password used to protect the key store. |  | 
| Algorithm a| String | The algorithm used by the key store. |  | 
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  | 
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  | 
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  | 
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  | 
|===

[[CustomOcspResponder]]
=== Custom Ocsp Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  | 
|===

[[CrlFile]]
=== Crl File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  | 
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | The reconnection strategy to use. |  | 
|===

[[Reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. |  | 
| Blocking a| Boolean | If false, the reconnection strategy runs in a separate, non-blocking thread. |  | 
| Count a| Number | How many reconnection attempts to make. |  | 
|===

[[ReconnectForever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. |  | 
| Blocking a| Boolean | If false, the reconnection strategy runs in a separate, non-blocking thread. |  | 
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it. If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  | 
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  | 
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed. |  | 
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed content on the disk is buffered. |  | 
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which *In Memory Size* is expressed. |  | 
|===

[[KnowledgeBaseConfig]]
=== Knowledge Base Config

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Knowledge Base Id a| String | The unique identifier of the knowledge base. |  | 
| Number Of Results a| Number | The number of results to return from the query. |  | 
| Override Search Type a| Enumeration, one of:

** HYBRID
** SEMANTIC | The search type to use for retrieval. |  | 
| Retrieval Metadata Filter Type a| Enumeration, one of:

** AND_ALL
** OR_ALL | The filter type to apply to retrieval metadata. |  | 
| Metadata Filters a| Object | The metadata filters to apply to the retrieval query. |  | 
| Reranking Configuration a| <<RerankingConfiguration>> | The reranking configuration for the knowledge base. |  | 
|===

[[RerankingConfiguration]]
=== Reranking Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Reranking Type a| String | The type of reranking to use. |  | 
| Model Arn a| String | The ARN of the model to use for reranking. |  | 
| Number Of Reranked Results a| Number | The number of reranked results to return. |  | 
| Selection Mode a| Enumeration, one of:

** SELECTIVE
** ALL | The selection mode for reranking. |  | 
| Fields To Exclude a| Array of String | The fields to exclude from reranking. |  | 
| Fields To Include a| Array of String | The fields to include in reranking. |  | 
| Additional Model Request Fields a| Object | Additional fields to include in the model request. |  | 
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT | The error type from the source. |  | 
| Target a| String | The target error type. |  | x
|===

[[MemoryRecordCreateInputParameters]]
=== Memory Record Create Input Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Content a| <<MemoryContentParameters>> | The content of the memory record. |  | x
| Namespaces a| Array of String | The namespaces associated with the memory record. |  | x
| Timestamp a| String | The timestamp of the memory record. |  | x
| Memory Strategy Id a| String | The unique identifier of the memory strategy. |  | 
| Request Identifier a| String | A unique identifier for the create request. |  | x
| Metadata a| Object | Additional metadata associated with the memory record. |  | 
|===

[[MemoryContentParameters]]
=== Memory Content Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Text a| String | The text content of the memory record. |  | 
|===

[[MemoryRecordDeleteInputParameters]]
=== Memory Record Delete Input Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Memory Record Id a| String | The unique identifier of the memory record to delete. |  | x
|===

[[MemoryRecordUpdateInputParameters]]
=== Memory Record Update Input Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Memory Record Id a| String | The unique identifier of the memory record to update. |  | x
| Content a| <<MemoryContentParameters>> | The updated content of the memory record. |  | 
| Namespaces a| Array of String | The updated namespaces associated with the memory record. |  | 
| Timestamp a| String | The timestamp of the memory record. |  | x
| Memory Strategy Id a| String | The unique identifier of the memory strategy. |  | 
| Metadata a| Object | Additional metadata associated with the memory record. |  | 
|===

[[InvokeAgentRuntimeAttributes]]
=== Invoke Agent Runtime Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Baggage a| String | The baggage header propagated with the request. |  | 
| Content Type a| String | The content type of the response. |  | 
| Mcp Protocol Version a| String | The Model Context Protocol (MCP) version used. |  | 
| Mcp Session Id a| String | The MCP session identifier. |  | 
| Runtime Session Id a| String | The unique identifier of the runtime session. |  | 
| Status Code a| Number | HTTP status code of the response. |  | 
| Trace Id a| String | The trace identifier used for distributed tracing. |  | 
| Trace Parent a| String | The W3C trace context `traceparent` header. |  | 
| Trace State a| String | The W3C trace context `tracestate` header. |  | 
|===

[[MemoryMetadataFilterExpressionParameters]]
=== Memory Metadata Filter Expression Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Left a| <<LeftExpression>> | The left-hand side of the filter expression. |  | 
| Operator a| Enumeration, one of:

** EQUALS_TO
** EXISTS
** NOT_EXISTS
** BEFORE
** AFTER
** CONTAINS
** GREATER_THAN
** GREATER_THAN_OR_EQUALS
** LESS_THAN
** LESS_THAN_OR_EQUALS | The comparison operator to apply between the left and right expressions. |  | 
| Right a| <<RightExpression>> | The right-hand side of the filter expression. |  | 
|===

[[LeftExpression]]
=== Left Expression

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Metadata Key a| String | The metadata key to filter by. |  | 
|===

[[RightExpression]]
=== Right Expression

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Metadata Value a| <<MemoryMetadataValueParameters>> | The metadata value to compare against. |  | 
|===

[[MemoryMetadataValueParameters]]
=== Memory Metadata Value Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| String Value a| String | The string value to compare. |  | 
| String List Value a| Array of String | The list of string values to compare. |  | 
| Number Value a| Number | The numeric value to compare. |  | 
| Date Time Value a| String | The date-time value to compare. |  | 
|===

[[SearchCriteriaParameters]]
=== Search Criteria Parameters

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Search Query a| String | The query text used to search for memory records. |  | x
| Memory Strategy Id a| String | The unique identifier of the memory strategy. |  | 
| Top K a| Number | The number of top matching results to return. |  | 
| Memory Metadata Filters a| Array of <<MemoryMetadataFilterExpressionParameters>> | The metadata filters to apply to the search. |  | 
|===

[[StopRuntimeSessionAttributes]]
=== Stop Runtime Session Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Runtime Session Id a| String | The unique identifier of the runtime session. |  | 
| Status Code a| Number | HTTP status code of the response. |  | 
|===

[[ConverseAttachment]]
=== Converse Attachment

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The file system path of the attachment. |  | 
| Bytes a| String | The content of the attachment. |  | 
| Name a| String | The name of the attachment. |  | 
| Format a| Enumeration, one of:

** png
** jpeg
** gif
** webp
** pdf
** csv
** doc
** docx
** html
** txt
** md
** xls
** xlsx | The file format of the attachment. |  | x
|===
